--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,3 +21,135 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 36px;
+  padding-bottom: 32px;
+}
+
+input[type="text"] {
+  border-radius: 4px;
+  border: 1px solid #808080;
+  max-width: 272px;
+  width: 100%;
+  padding: 8px 0 8px 16px;
+  margin-right: 8px;
+  font-family: Arial, sans-serif;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+input[type="text"]::placeholder {
+  font-family: Arial, sans-serif;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+input[type="text"]:hover {
+  border: 1px solid #000;
+}
+
+input[type="text"]:active {
+  border: 1px solid #2E2F42;
+}
+
+button[type="submit"] {
+  border: none;
+  border-radius: 8px;
+  background-color: #4E75FF;
+  padding: 8px 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: Arial, sans-serif;
+  color: #ffffff;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+}
+
+button[type="submit"]:hover {
+  background-color: #6C8CFF;
+  border: none;
+}
+
+.gallery{
+ display: flex;
+ flex-wrap: wrap;
+ gap: 24px;
+}
+
+.gallery-item {
+ flex-basis: calc((100% - 96px) / 5);
+}
+
+.gallery-images {
+  max-width: 300px;
+  width: 100%;
+  display: block;
+  max-height: 150px;
+  height: 100%;
+  width: 100%; 
+}
+
+.photo-info {
+  display: flex;
+}
+
+.info-number {
+font-size: 12px;
+text-align: center;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  position: relative;
+  animation: rotate 1s linear infinite;
+}
+
+.loader::before,
+.loader::after {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  inset: 0px;
+  border-radius: 50%;
+  border: 5px solid #FFF;
+  animation: prixClipFix 2s linear infinite;
+}
+
+.loader::after {
+  inset: 8px;
+  transform: rotate3d(90, 90, 0, 180deg);
+  border-color: #FF3D00;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg)
+  }
+
+  100% {
+    transform: rotate(360deg)
+  }
+}
+
+@keyframes prixClipFix {
+  0% {
+    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0)
+  }
+
+  50% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0)
+  }
+
+  75%,
+  100% {
+    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%)
+  }
+}
