--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
   |============================
 */
 @import url('./reset.css');
+@import url('./file.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,15 +23,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.section-form {
-  margin-bottom: 0;
-}
-
 form {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 0;
+  margin-bottom: 6px;
 }
 
 input[type="text"] {
@@ -79,10 +76,6 @@ button[type="submit"]:hover {
   border: none;
 }
 
-.section-gallery {
-   margin-top: -40px;
-}
-
 .gallery{
  display: flex;
  flex-wrap: wrap;
@@ -111,56 +104,3 @@ font-size: 12px;
 text-align: center;
 }
 
-.loader {
-  display: none;
-}
-
-.loader {
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  position: relative;
-  animation: rotate 1s linear infinite;
-}
-
-.loader::before,
-.loader::after {
-  content: "";
-  box-sizing: border-box;
-  position: absolute;
-  inset: 0px;
-  border-radius: 50%;
-  border: 5px solid #FFF;
-  animation: prixClipFix 2s linear infinite;
-}
-
-.loader::after {
-  inset: 8px;
-  transform: rotate3d(90, 90, 0, 180deg);
-  border-color: #FF3D00;
-}
-
-@keyframes rotate {
-  0% {
-    transform: rotate(0deg)
-  }
-
-  100% {
-    transform: rotate(360deg)
-  }
-}
-
-@keyframes prixClipFix {
-  0% {
-    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0)
-  }
-
-  50% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0)
-  }
-
-  75%,
-  100% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%)
-  }
-}
